--- a/dataset_processing/ministry_reports_processing.ipynb
+++ b/dataset_processing/ministry_reports_processing.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/essdata/IDU/venvs/common_venv/lib/python3.9/site-packages/geopandas/_compat.py:111: UserWarning: The Shapely GEOS version (3.10.3-CAPI-1.16.1) is incompatible with the GEOS version PyGEOS was compiled with (3.10.1-CAPI-1.16.0). Conversions between both will be slow.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -101,12 +110,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ontology = pd.read_csv('ontology.csv')\n",
-    "cities_coords = pd.read_csv('cities.csv')"
+    "# ontology = pd.read_csv('ontology.csv')\n",
+    "cities_coords = pd.read_csv('/var/essdata/IDU/other/mm_22/industrial-location/dataset_processing/input_data/cities.csv')"
    ]
   },
   {
@@ -144,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
