fixed a bug and changed a pipeline a little

--- a/dataset_processing/graph_processing/test_network_construction.ipynb
+++ b/dataset_processing/graph_processing/test_network_construction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,156 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Отрасль</th>\n",
-       "      <th>Уровень образования</th>\n",
-       "      <th>Специальность</th>\n",
-       "      <th>Код направления</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Добыча нефти и газа</td>\n",
-       "      <td>СПО</td>\n",
-       "      <td>Оператор, аппаратчик</td>\n",
-       "      <td>21.01.05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Добыча нефти и газа</td>\n",
-       "      <td>СПО</td>\n",
-       "      <td>Оператор, аппаратчик</td>\n",
-       "      <td>21.01.16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Добыча нефти и газа</td>\n",
-       "      <td>СПО</td>\n",
-       "      <td>Оператор, аппаратчик</td>\n",
-       "      <td>21.02.18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Добыча нефти и газа</td>\n",
-       "      <td>СПО</td>\n",
-       "      <td>Монтажник</td>\n",
-       "      <td>21.01.06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Добыча нефти и газа</td>\n",
-       "      <td>СПО</td>\n",
-       "      <td>Монтажник</td>\n",
-       "      <td>21.01.14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>246</th>\n",
-       "      <td>Электроника и микроэлектроника</td>\n",
-       "      <td>ВО</td>\n",
-       "      <td>Инженер-конструктор</td>\n",
-       "      <td>11.03.03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>247</th>\n",
-       "      <td>Электроника и микроэлектроника</td>\n",
-       "      <td>ВО</td>\n",
-       "      <td>Специалист по сертификации</td>\n",
-       "      <td>27.03.01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>248</th>\n",
-       "      <td>Электроника и микроэлектроника</td>\n",
-       "      <td>ВО</td>\n",
-       "      <td>Технолог</td>\n",
-       "      <td>11.03.04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>249</th>\n",
-       "      <td>Электроника и микроэлектроника</td>\n",
-       "      <td>ВО</td>\n",
-       "      <td>Технолог</td>\n",
-       "      <td>11.03.03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>250</th>\n",
-       "      <td>Электроника и микроэлектроника</td>\n",
-       "      <td>ВО</td>\n",
-       "      <td>Инженер по качеству</td>\n",
-       "      <td>27.03.02</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>251 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                            Отрасль Уровень образования  \\\n",
-       "0               Добыча нефти и газа                 СПО   \n",
-       "1               Добыча нефти и газа                 СПО   \n",
-       "2               Добыча нефти и газа                 СПО   \n",
-       "3               Добыча нефти и газа                 СПО   \n",
-       "4               Добыча нефти и газа                 СПО   \n",
-       "..                              ...                 ...   \n",
-       "246  Электроника и микроэлектроника                  ВО   \n",
-       "247  Электроника и микроэлектроника                  ВО   \n",
-       "248  Электроника и микроэлектроника                  ВО   \n",
-       "249  Электроника и микроэлектроника                  ВО   \n",
-       "250  Электроника и микроэлектроника                  ВО   \n",
-       "\n",
-       "                  Специальность Код направления  \n",
-       "0          Оператор, аппаратчик        21.01.05  \n",
-       "1          Оператор, аппаратчик        21.01.16  \n",
-       "2          Оператор, аппаратчик        21.02.18  \n",
-       "3                     Монтажник        21.01.06  \n",
-       "4                     Монтажник        21.01.14  \n",
-       "..                          ...             ...  \n",
-       "246         Инженер-конструктор        11.03.03  \n",
-       "247  Специалист по сертификации        27.03.01  \n",
-       "248                    Технолог        11.03.04  \n",
-       "249                    Технолог        11.03.03  \n",
-       "250         Инженер по качеству        27.03.02  \n",
-       "\n",
-       "[251 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ontology"
+    "responses.head(3)"
    ]
   },
   {
@@ -216,9 +71,42 @@
     "    ontology,\n",
     "    specialists,\n",
     "    years=list(range(2015, 2022)),\n",
+    "    industries=['Судостроение'],\n",
+    "    return_responses=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ontology[ontology['Специальность']=='Монтажник'].head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G2, responses3 = NetworkConstruction.run_pipeline(\n",
+    "    pre_calculated_responses=responses2,\n",
+    "    cv=cv,\n",
+    "    specialists=specialists,\n",
     "    group=['Монтажник'],\n",
     "    return_responses=True\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "responses3.head(3)"
    ]
   }
  ],
