--- a/dataset_processing/graph_processing/test_network_construction.ipynb
+++ b/dataset_processing/graph_processing/test_network_construction.ipynb
@@ -17,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Указать путь к файлам\n",
     "path = ''"
    ]
   },
@@ -45,12 +46,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "responses.head(3)"
+    "## Построить граф миграций"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Отфильтровать по году и индустрии исходные таблицы"
    ]
   },
   {
@@ -86,8 +92,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Отфильтровать по профессии обработанную таблицу responses"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,6 +110,24 @@
     "    specialists=specialists,\n",
     "    group=['Монтажник'],\n",
     "    return_responses=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Просто построить граф по обрабоданной таблице responses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G3 = NetworkConstruction.run_pipeline(\n",
+    "    pre_calculated_responses=responses3\n",
     ")"
    ]
   },
