moved data pre-processing out of the pipeline

--- a/dataset_processing/graph_processing/test_network_construction.ipynb
+++ b/dataset_processing/graph_processing/test_network_construction.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Построить граф миграций"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -18,6 +25,7 @@
    "outputs": [],
    "source": [
     "# Указать путь к файлам\n",
+    "\n",
     "path = ''"
    ]
   },
@@ -27,8 +35,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Чтение необходимых файлов\n",
+    "\n",
     "vacancies = pd.read_csv(path + \"vacancy_unique_cities.csv\")\n",
-    "cv = pd.read_csv(path + \"curricula_vitae_unique.csv\")\n",
     "responses = pd.read_csv(path + \"responses.csv\", sep=\";\")\n",
     "cv_cities = pd.read_csv(path + \"curricula_vitae_cities.csv\")\n",
     "cv_years = pd.read_csv(path + \"curricula_vitae_years.csv\")\n",
@@ -41,15 +50,29 @@
     "org_cities = pd.json_normalize(org_cities.iloc[:, 0])\n",
     "\n",
     "specialists = pd.read_csv(path + 'specialists_table.csv')\n",
-    "ontology = pd.read_csv(path + 'ontology.csv')\n",
-    "cv = pd.read_csv(path + \"curricula_vitae_unique.csv\")"
+    "ontology = pd.read_csv(path + 'ontology.csv')"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Построить граф миграций"
+    "# data preprocessing\n",
+    "\n",
+    "responses = responses.merge(specialists[[\"id_cv\", \"label\"]], how=\"left\").merge(\n",
+    "    ontology.rename(columns={\"Специальность\": \"label\", \"Отрасль\": \"industry\"})[\n",
+    "        [\"label\", \"industry\"]\n",
+    "    ]\n",
+    "    .drop_duplicates()\n",
+    "    .groupby(\"label\")[\"industry\"]\n",
+    "    .apply(lambda x: \",\".join(x))\n",
+    "    .reset_index()[[\"label\", \"industry\"]],\n",
+    "    how=\"left\",\n",
+    ")\n",
+    "\n",
+    "responses.loc[:, \"industry\"].fillna(\"Unknown\", inplace=True)"
    ]
   },
   {
@@ -66,29 +89,17 @@
    "outputs": [],
    "source": [
     "G, responses2 = NetworkConstruction.run_pipeline(\n",
-    "    responses,\n",
-    "    vacancies,\n",
-    "    kladr_2021,\n",
-    "    organizations,\n",
-    "    org_cities,\n",
-    "    cv_years,\n",
-    "    cv_cities,\n",
-    "    cv,\n",
-    "    ontology,\n",
-    "    specialists,\n",
+    "    responses=responses,\n",
+    "    vacancies=vacancies,\n",
+    "    kladr_2021=kladr_2021,\n",
+    "    organizations=organizations,\n",
+    "    dadata_organisations_info=org_cities,\n",
+    "    cv_years=cv_years,\n",
+    "    cv_cities=cv_cities,\n",
     "    years=list(range(2015, 2022)),\n",
-    "    industries=['Судостроение'],\n",
-    "    return_responses=True\n",
+    "    industries=[\"Судостроение\"],\n",
+    "    return_responses=True,\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ontology[ontology['Специальность']=='Монтажник'].head(3)"
    ]
   },
   {
@@ -100,14 +111,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "G2, responses3 = NetworkConstruction.run_pipeline(\n",
     "    pre_calculated_responses=responses2,\n",
-    "    cv=cv,\n",
-    "    specialists=specialists,\n",
     "    group=['Монтажник'],\n",
     "    return_responses=True\n",
     ")"
@@ -129,15 +138,6 @@
     "G3 = NetworkConstruction.run_pipeline(\n",
     "    pre_calculated_responses=responses3\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "responses3.head(3)"
    ]
   }
  ],
