--- a/example_notebooks/jhm_example.ipynb
+++ b/example_notebooks/jhm_example.ipynb
@@ -10,6 +10,7 @@
     "import os\n",
     "path = '/'.join(os.getcwd().split('/')[:-1])\n",
     "sys.path.append(path)\n",
+    "sys.path.append(path + '/api')\n",
     "\n",
     "import geopandas as gpd\n",
     "from api.app.jhm_metric_calcs.jhm_metric import main\n",
@@ -24,34 +25,72 @@
    "outputs": [],
    "source": [
     "# read dataset with avg rent price and house locations (geometry)\n",
-    "house_prices = gpd.read_parquet(path + '/api/app/data/houses_price_demo.parquet')\n",
-    "house_prices = house_prices.to_crs(house_prices.estimate_utm_crs())"
+    "city_name = 'saint-petersburg'\n",
+    "g_type='drive'\n",
+    "\n",
+    "# read drive nx graph\n",
+    "G_d = nx.read_graphml(f'/home/gk/vscode/rita_project_4/industrial-location/api/app/provisions_data/{city_name}_prov/G_{g_type}.graphml')\n",
+    "\n",
+    "house_prices = gpd.read_parquet(f\"/home/gk/vscode/rita_project_4/industrial-location/api/app/provisions_data/{city_name}_prov/houses_price_demo_prov.parquet\")\n",
+    "house_prices = house_prices.to_crs(G_d.graph[\"crs\"])\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'epsg:32636'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# read drive nx graph\n",
-    "G_d = nx.read_graphml(path + '/api/app/data/G_drive.graphml')"
+    "G_d.graph['crs']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('1', {'x': 351066.09, 'y': 6643191.31})"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# define company's potential location\n",
-    "# and convert coordinates crs to local crs\n",
-    "company_location = {\"lon\": 59.860510, \"lat\": 30.211518}"
+    "list(G_d.nodes(data=True))[3]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define company's potential location\n",
+    "# and convert coordinates crs to local crs\n",
+    "\n",
+    "company_location = {\"lon\": 59.869047, \"lat\": 30.206686}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,16 +100,16 @@
     "\n",
     "worker1 = Worker()\n",
     "worker1.speciality = \"worker_1\"\n",
-    "worker1.salary = 80_000\n",
+    "worker1.salary = 10_000\n",
     "\n",
     "worker2 = Worker()\n",
     "worker2.speciality = \"worker_2\"\n",
-    "worker2.salary = 50_000"
+    "worker2.salary = 80_000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +140,7 @@
     "    worker_and_salary=worker_and_salary,\n",
     "    company_location=company_location,\n",
     "    graph=G_d,\n",
-    "    cell_size_meters=500)"
+    "    cell_size_meters=300)"
    ]
   },
   {
