remove update_dict

--- a/api/app_test.ipynb
+++ b/api/app_test.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/essdata/IDU/venvs/common_venv/lib/python3.9/site-packages/geopandas/_compat.py:111: UserWarning: The Shapely GEOS version (3.10.3-CAPI-1.16.1) is incompatible with the GEOS version PyGEOS was compiled with (3.10.1-CAPI-1.16.0). Conversions between both will be slow.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import geopandas as gpd\n",
@@ -23,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,16 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "responses = r.post('http://10.32.1.62:5500/api/calculation/estimates', json=test_request)"
+    "# responses = r.post('http://10.32.1.62:5500/api/calculation/estimates', json=test_request)\n",
+    "responses = r.post('http://10.32.1.60:5000/api/calculation/estimates', json=test_request)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +179,7 @@
        "[1117 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,12 +198,13 @@
     "  \"city\": \"Пермский край, Пермь\"\n",
     "}\n",
     "\n",
-    "responses = r.post('http://10.32.1.62:5500/api/calculation/connection', json=test_request)"
+    "# responses = r.post('http://10.32.1.62:5500/api/calculation/connection', json=test_request)\n",
+    "responses = r.post('http://10.32.1.60:5000/api/calculation/connection', json=test_request)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,42 +222,22 @@
     "  'estimates_table': json.loads(estimates.to_json())\n",
     "}\n",
     "\n",
-    "responses = r.post('http://10.32.1.62:5500/api/calculation/prediction', json=test_request)"
+    "# responses = r.post('http://10.32.1.62:5500/api/calculation/prediction', json=test_request)\n",
+    "responses = r.post('http://10.32.1.60:5000/api/calculation/prediction', json=test_request)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'before': {'estimate': 0.947, 'in_migration': 718},\n",
-       " 'after': {'estimate': 0.947, 'in_migration': 718}}"
+       "dict_keys(['city_features', 'new_links'])"
       ]
      },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "responses.json()[\"update_dict\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['city_features', 'update_dict', 'new_links'])"
-      ]
-     },
-     "execution_count": 34,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +248,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>estimate_after</th>\n",
+       "      <th>estimate_before</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.947</td>\n",
+       "      <td>0.947</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   estimate_after  estimate_before\n",
+       "0           0.947            0.947"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city_features = responses.json()['city_features']\n",
+    "gpd.GeoDataFrame.from_features(city_features)[[\"estimate_after\", \"estimate_before\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +321,7 @@
        "True"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +361,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +392,102 @@
     "  'estimates_table': json.loads(estimates.to_json())\n",
     "}\n",
     "\n",
-    "responses = r.post('http://10.32.1.62:5500/api/calculation/prediction', json=test_request)"
+    "# responses = r.post('http://10.32.1.62:5500/api/calculation/prediction', json=test_request)\n",
+    "responses = r.post('http://10.32.1.60:5000/api/calculation/prediction', json=test_request)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>estimate_after</th>\n",
+       "      <th>estimate_before</th>\n",
+       "      <th>num_in_migration_before</th>\n",
+       "      <th>num_in_migration_after</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.982</td>\n",
+       "      <td>0.947</td>\n",
+       "      <td>718.0</td>\n",
+       "      <td>3383.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   estimate_after  estimate_before  num_in_migration_before  \\\n",
+       "0           0.982            0.947                    718.0   \n",
+       "\n",
+       "   num_in_migration_after  \n",
+       "0                  3383.0  "
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city_features = responses.json()['city_features']\n",
+    "gpd.GeoDataFrame.from_features(city_features)[[\"estimate_after\", \"estimate_before\", \"num_in_migration_before\", \"num_in_migration_after\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['geometry', 'city', 'city_category', 'cv_count_weighted_sum',\n",
+       "       'cvs_count_all', 'estimate_after', 'estimate_before', 'factories_total',\n",
+       "       'graduates_forecast_number', 'graduates_forecast_sum_number',\n",
+       "       'graduates_weighted_sum', 'harsh_climate', 'index', 'max_salary',\n",
+       "       'median_salary', 'min_salary', 'num_in_migration_after',\n",
+       "       'num_in_migration_before', 'num_out_migration', 'num_responses',\n",
+       "       'one_vacancy_out_response', 'population', 'probability_to_move',\n",
+       "       'region', 'specialists_number', 'specialists_sum_number',\n",
+       "       'ueqi_citywide_space', 'ueqi_green_spaces',\n",
+       "       'ueqi_public_and_business_infrastructure', 'ueqi_residential',\n",
+       "       'ueqi_score', 'ueqi_social_and_leisure_infrastructure',\n",
+       "       'ueqi_street_networks', 'vacancy_count'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gpd.GeoDataFrame.from_features(city_features).columns"
    ]
   },
   {
